elk日志简单使用

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,19 +1,20 @@
-input {
-	beats {
-		port => 5044
-	}
+    input {
+        beats {
+            port => 5044
+        }
 
-	tcp {
-		port => 5000
-	}
-}
+        tcp {
+            port => 5000
+            codec => json_lines
+        }
+    }
 
-## Add your filters / logstash plugins configuration here
+    ## Add your filters / logstash plugins configuration here
 
-output {
-	elasticsearch {
-		hosts => "elasticsearch:9200"
-		user => "elastic"
-		password => "changeme"
-	}
-}
+    output {
+        elasticsearch {
+            hosts => "elasticsearch:9200"
+            user => "elastic"
+            password => "changeme"
+        }
+    }
